--- a/themes/husserl/asset/sass/04_organisms/page-blocks/_hero-block.scss
+++ b/themes/husserl/asset/sass/04_organisms/page-blocks/_hero-block.scss
@@ -1,13 +1,13 @@
+//mobile 
 .hero {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
     width: 100%;
-    height: 100vh;
-    position: relative;
 
     .hero-image {
         width: 100%;
-        height: 100%;
-        position: absolute;
-        z-index: 0;
+        height: 354px;
 
         img {
             width: 100%;
@@ -17,23 +17,41 @@
     }
 
     .hero-text-section {
+        padding: 0 30px;
         width: 100%;
-        height: 100%;
-        display: flex;
-        align-items: flex-end;
-        z-index: 1;
-        position: relative;
-        padding: 0 60px 80px 60px;
-        color: var(--secondary-text-color);
-
+        
         .hero-text {
             display: flex;
             flex-direction: column;
             gap: 10px;
 
             .hero-info {
-                margin-bottom: 15px;
+                margin-bottom: 20px;
             }
+        }
+    }
+}
+
+//desktop
+@media screen and (min-width: 1024px) {
+    .hero {
+        height: calc(100vh - 100px);
+        position: relative;
+
+        .hero-image {
+            height: 100%;
+            position: absolute;
+            z-index: 0;
+        }
+
+        .hero-text-section {
+            height: 100%;
+            display: flex;
+            align-items: flex-end;
+            z-index: 1;
+            position: relative;
+            padding: 0 60px 80px 60px;
+            color: var(--secondary-text-color);
         }
     }
 }
