--- a/themes/husserl/view/omeka/site/page/show.phtml
+++ b/themes/husserl/view/omeka/site/page/show.phtml
@@ -1,3 +1,3 @@
-<div class="<?php echo str_replace(' ', '-',strtolower($page->title()))?> content">
+<div class="<?php echo str_replace(' ', '-',strtolower($page->title()))?> container">
   <?php echo $this->content; ?>
 </div>
