--- a/themes/kul/view/layout/layout.phtml
+++ b/themes/kul/view/layout/layout.phtml
@@ -1,4 +1,5 @@
 <?php
+$partial = $plugins->get('partial');
 $escape = $this->plugin('escapeHtml');
 $siteTitle = $site->title();
 $this->htmlElement('html')->setAttribute('lang', $this->lang());
