--- a/themes/husserl/view/common/block-layout/search-block.phtml
+++ b/themes/husserl/view/common/block-layout/search-block.phtml
@@ -50,10 +50,10 @@ $translate = $this->plugin('translate');
           </select>
         </div>
         <div class="search-advanced-section__search-advanced-item-select search-advanced-item-select">
-          <select class="select" placeholder="<?php echo $translate("Title");?>" name="facet[dcterms_text][]">                         
+          <select class="select" placeholder="<?php echo $translate("Title");?>" name="facet[title][]">                         
             <option value="">Title</option>     
             <?php foreach($titles as $key=>$value):?>                          
-              <option value="<?php echo $value['val'];?>">
+              <option value="<?php echo htmlspecialchars($value['val'], ENT_QUOTES, 'UTF-8');?>">
                 <?php echo $value['val'];?>
               </option>
             <?php endforeach;?>
