--- a/themes/husserl/asset/sass/04_organisms/page-blocks/_search-block.scss
+++ b/themes/husserl/asset/sass/04_organisms/page-blocks/_search-block.scss
@@ -46,3 +46,20 @@
         }
     }
 }
+
+@media screen and (min-width: 1024px) {
+    .search-block {
+        padding: 0 60px;
+        
+        .search-section {
+            .search-advanced-section {
+                flex-direction: row;
+                flex-wrap: wrap;
+
+                .search-advanced-item-select {
+                    width: calc(50% - 10px);
+                }
+            }
+        }
+    }
+}
