--- a/themes/husserl/asset/sass/04_organisms/page-blocks/_item-card.scss
+++ b/themes/husserl/asset/sass/04_organisms/page-blocks/_item-card.scss
@@ -2,7 +2,6 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
 
     .item-card-top-section {
         .item-card-image {
@@ -63,5 +62,23 @@
                 }
             }
         }
+    }
+}
+
+@media screen and (min-width: 768px) { 
+    .item-card {
+        width: calc(50% - 10px);
+    }
+}
+
+@media screen and (min-width: 1024px) { 
+    .item-card {
+        width: calc(33% - 13.3px);
+    }
+}
+
+@media screen and (min-width: 1300px) { 
+    .item-card {
+        width: calc(25% - 15px);
     }
 }
