--- a/themes/husserl/asset/sass/04_organisms/footer/_footer.scss
+++ b/themes/husserl/asset/sass/04_organisms/footer/_footer.scss
@@ -69,6 +69,9 @@
 //desktop
 @media screen and (min-width: 1024px) {
     .footer {
+        margin: 130px 0 30px 0;
+        padding: 0 60px;
+
         .footer-content {
             margin: 15px 0 25px 0;
             flex-direction: row;
