--- a/themes/husserl/asset/sass/06_pages/_browse.scss
+++ b/themes/husserl/asset/sass/06_pages/_browse.scss
@@ -2,12 +2,17 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
+    width: 100%;
 
     .browse-top-section {
         padding: 40px 30px 0;
         display: flex;
         flex-direction: column;
         gap: 30px;
+
+        .page-breadcrumb {
+            padding: 0;
+        }
 
         .page-information {
             display: flex;
